ansible/templates/rq-worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rq-worker
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: rq-worker
  template:
    metadata:
      labels:
        app: rq-worker
    spec:
      containers:
      - name: rq-worker
        image: jorrithk/kb-indexer-cloud-backend:latest
        imagePullPolicy: IfNotPresent
        command: ["rq", "worker"]
  strategy:
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 0
