ansible/templates/ingress-monitoring.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: devops.freedynamicdns.org
      http:
        paths:
          - path: /grafana(.*)
            pathType: ImplementationSpecific 
            backend:
              service:
                name: monitoring-stack-grafana
                port:
                  number: 3000
