ansible/templates/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: interface-ingress
  namespace: default
    #annotations:
    #nginx.ingress.kubernetes.io/use-regex: "true"
    #ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix 
            backend:
              service:
                name: kb-indexer-cloud-backend
                port:
                  number: 8080
