ansible/templates/ingress2.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: interface-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /dashboard
            pathType: Prefix 
            backend:
              service:
                name: kb-indexer-cloud-backend
                port:
                  number: 8080
          - path: /monitoring
            pathType: Prefix
            backend:
              service:
                name: prometheus-monitoring
                port:
                  number: 9090
